# agent-portfolio

./: .gitignore  CLAUDE.md  README.md
.claude/agents/: code-reviewer.md  data-scientist.md  db-reader.md  debugger.md  pm-reviewer.md  senior-eng-reviewer.md
.claude/commands/: review.md
competitive-intel-agent/: .env.example  README.md  RUNBOOK.md  demo.py  main.py  requirements.txt  setup_db.py  smtp_test.py
competitive-intel-agent/db/: schema.sql
competitive-intel-agent/evals/: README.md  run_evals.py
data-quality-agent/: .gitignore  README.md  pyproject.toml
data-quality-agent/docs/superpowers/plans/: 2026-05-25-data-quality-agent-mvp-v1-implementation.md
data-quality-agent/docs/superpowers/specs/: 2026-05-25-data-quality-agent-mvp-v1-design.md
data-quality-agent/src/dq_agent/: __main__.py  cli.py  config.py  connectors.py  expressions.py  models.py  profiler.py  reports.py  rules.py  scaffold.py  verdict.py
data-quality-agent/tests/: test_cli.py  test_config.py  test_connectors.py  test_profiler.py  test_reports.py  test_rules.py  test_scaffold.py
meeting-prep-agent/: .env.example  .gitignore  CLAUDE.md  README.md  RUNBOOK.md  agent.py  auth.py  cache.py  logger.py  main.py  meetings.py  requirements.txt  schedule_daily.ps1
morning-briefing-agent/: RUNBOOK.md  briefing.py
pm-workflow-agent/: .gitignore  README.md  RUNBOOK.md  agent.py  intake.py  logger.py  main.py  prd-template.docx  requirements.txt
scripts/: validate-readonly-query.sh
templates/: daily-review.md  prd-enterprise-sso.md  renewable_energy_pptx.py
(+67 files in other folders)
